[gd_scene load_steps=15 format=2]

[ext_resource path="res://Skeleton.gd" type="Script" id=1]
[ext_resource path="res://skeleton/left_arm.png" type="Texture" id=2]
[ext_resource path="res://bones.wav" type="AudioStream" id=3]
[ext_resource path="res://skeleton/torso.png" type="Texture" id=4]
[ext_resource path="res://skeleton/right_arm.png" type="Texture" id=5]
[ext_resource path="res://skeleton/right_leg.png" type="Texture" id=6]
[ext_resource path="res://skeleton/skull.png" type="Texture" id=7]
[ext_resource path="res://skeleton/left_leg.png" type="Texture" id=8]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 4, 3.75 )

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 4, 3.625 )

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 2, 2.75 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0, 1, 0.219608, 1 )

[sub_resource type="Animation" id=6]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Arm_Sprite_R:flip_h")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Arm_Sprite_L:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Leg_Sprite_R:flip_h")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Leg_Sprite_L:flip_h")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Skull_Sprite:offset")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Arm_Sprite_R:texture")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ ExtResource( 5 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Arm_Sprite_L:texture")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ ExtResource( 2 ) ]
}

[sub_resource type="Animation" id=7]
resource_name = "WalkCycle"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Arm_Sprite_R:flip_h")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ true, false, true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Arm_Sprite_L:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5, 1, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ true, false, true, false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Leg_Sprite_R:flip_h")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5, 1, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ true, false, true, false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Leg_Sprite_L:flip_h")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.5, 1, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ true, false, true, false ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Skull_Sprite:offset")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0.2, 0.6, 1.2, 1.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ Vector2( 0, 0 ), Vector2( -1, 1 ), Vector2( 0, 0 ), Vector2( 1, 1 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Arm_Sprite_R:texture")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.5, 1, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 2 ), ExtResource( 5 ), ExtResource( 2 ), ExtResource( 5 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Arm_Sprite_L:texture")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 0.5, 1, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 5 ), ExtResource( 2 ), ExtResource( 5 ), ExtResource( 2 ) ]
}

[node name="Skeleton" type="KinematicBody2D"]
position = Vector2( 160, 90 )
collision_layer = 3
script = ExtResource( 1 )

[node name="Trunk" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 0, 4.25 )
shape = SubResource( 2 )

[node name="Skull" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 0, -3.375 )
shape = SubResource( 8 )

[node name="Arm_R" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( -6, 1.75 )
shape = SubResource( 9 )

[node name="Arm_L" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 6, 2 )
shape = SubResource( 9 )

[node name="Torso_Sprite" type="Sprite" parent="."]
texture = ExtResource( 4 )

[node name="Arm_Sprite_R" type="Sprite" parent="."]
texture = ExtResource( 5 )
flip_h = true

[node name="Arm_Sprite_L" type="Sprite" parent="."]
texture = ExtResource( 2 )
flip_h = true

[node name="Leg_Sprite_R" type="Sprite" parent="."]
texture = ExtResource( 6 )
flip_h = true

[node name="Leg_Sprite_L" type="Sprite" parent="."]
texture = ExtResource( 8 )
flip_h = true

[node name="Skull_Sprite" type="Sprite" parent="."]
texture = ExtResource( 7 )

[node name="ProgressBar2" type="ProgressBar" parent="."]
visible = false
margin_left = -10.0
margin_top = -10.0
margin_right = 190.0
margin_bottom = 10.0
rect_scale = Vector2( 0.1, 0.1 )
custom_styles/fg = SubResource( 5 )
max_value = 1.0
value = 0.5
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
playback_speed = 2.0
anims/RESET = SubResource( 6 )
anims/WalkCycle = SubResource( 7 )

[node name="Rattle" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )
volume_db = -11.375
